[tool.poetry]
name = "adr"
version = "1.0.0"
description = ""
authors = ["sophia.thurmond"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3.1"
python-dotenv = "^1.0.0"
discord = "^2.3.1"
asyncio = "^3.4.3"
pynacl = "^1.5.0"
toml = "^0.10.2"
youtube-dl = "^2021.12.17"
yt-dlp = "^2023.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
